# Learning

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
AlgoPatterns/: CMakeLists.txt
AlgoPatterns/BinarySearch/: BinarySearch.cc  BinarySearch.h
AlgoPatterns/KWayMerge/: KWayMerge.h
AlgoPatterns/SlidingWindow/: slidingWindowPattern.cc  slidingWindowPattern.h
AlgoPatterns/SlowFastPointers/: slowFastPointers.cc  slowFastPointers.h
AlgoPatterns/Tests/BinarySearch/: BinarySearchBasicTests.cc
AlgoPatterns/Tests/KWayMergeTests/: KWayMergeTests.cc
AlgoPatterns/Tests/SlidingWindowPattern/: slidingWindowPatternTests.cc
AlgoPatterns/Tests/SlowFastPointersTests/: slowFastPointersTests.cc
AlgoPatterns/Tests/TopKElementsTests/: TopKElementsTests.cc
AlgoPatterns/Tests/TwoPointersPattern/: twoPointersPatternTests.cc
AlgoPatterns/TopKElements/: TopKElements.cc  TopKElements.h
AlgoPatterns/TwoPointersPattern/: twoPointersPattern.cc  twoPointersPattern.h
Algorithms/: CMakeLists.txt
Algorithms/BackTracking/: BackTrackingBasics.h  dummy.cc
Algorithms/BinarySearch/: BinarySearchBasics.h  BinarySearchProblems.h
Algorithms/CyclicSort/: CyclicSort.h
Algorithms/DivideAndConquer/: DivideAndConquerBasics.h
Algorithms/MergeIntervals/: MergeIntervals.h
Algorithms/Recursion/: RecursionBasics.h
Algorithms/SlidingWindow/: SlidingWindowsBasics.h  SlidingWindowsProblems.h
Algorithms/Sorting/: BasicSorting.h
Algorithms/Strings/: StringBasics.h
Algorithms/Subset/: Permutation.h  Subset.h
Algorithms/Tests/: CMakeLists.txt
Algorithms/Tests/BackTracking/: BackTrackingBasicsTest.cc
Algorithms/Tests/BinarySearch/: BinarySearchBasicTests.cc  BinarySearchProblemsTests.cc
Algorithms/Tests/CyclicSort/: CyclicSortTest.cc
Algorithms/Tests/DivideAndConquer/: DivideAndConquerBasicsTests.cc
Algorithms/Tests/MergeIntervals/: MergeIntervalsTests.cc
Algorithms/Tests/Recursion/: RecursionBasicsTests.cc
Algorithms/Tests/SlidingWindow/: SlidingWindowsBasics.cc
Algorithms/Tests/Sorting/: BasicSortingTests.cc
Algorithms/Tests/Strings/: StringBasicTests.cc
Algorithms/Tests/Subset/: permutationTests.cc  subsetTests.cc
Algorithms/Tests/TwoPointers/: TwoPointersBasicsTests.cc
Algorithms/TwoPointers/: TwoPointersBasics.h
DataStructures/: CMakeLists.txt
DataStructures/Cache/: Cache.h  LfuCache.h  LruCache.h
DataStructures/Graph/: DirectedGraph.h  DisjointSet.h  Graph.h  GraphProblems.h  GraphTraversal.h  KruskalSpanningTree.h  PrimsSpanningTree.h  TopologicalSort.h  UndirectedGraph.h
DataStructures/HashMap/: HashMap.h
DataStructures/Heap/: HeapBasic.cc  HeapBasic.h
DataStructures/LRUCache/: LRUCache.h  testCache.cc
DataStructures/LinkList/: LinkListBasic.h  LinkListProblems.h  LinkListTemplate.h
DataStructures/Tests/: CMakeLists.txt
DataStructures/Tests/Cache/: CacheBasicTests.cc  LruCacheTests.cc
DataStructures/Tests/Graph/: GraphBasicTests.cc  GraphDirectedBasicTests.cc  GraphProblemsTests.cc
DataStructures/Tests/HashMap/: hashTest.cc
DataStructures/Tests/Heap/: HeapBasicTests.cc
DataStructures/Tests/LinkList/: LinkListBasicTests.cc  LinkListProblemsTest.cc  LinkListTemplateTests.cc
DataStructures/Tests/Tree/: BstBasicTest.cc
DataStructures/Tree/: BinaryTree.cc  BinaryTree.h  BinaryTreeCpp.h  BinaryTreeGeneric.h  BinaryTreeProblems.h
DesignPatterns/: CMakeLists.txt
DesignPatterns/Basics/: basicPatterns.h  openClosePrinciple.h
DesignPatterns/Behavioral/ChainOfResponsibility/: ChainOfResponsibilityPattern.h
DesignPatterns/Behavioral/Command/: CommandPattern.h
DesignPatterns/Behavioral/Iterator/: CoroutineBstIterator.h  IteratorPattern.h
DesignPatterns/Behavioral/Observer/: ObserverPattern.h
DesignPatterns/Behavioral/State/: StatePattern.cc  StatePattern.h
DesignPatterns/Behavioral/Strategy/: StrategyPattern.h
DesignPatterns/Behavioral/Visitor/: visitorPattern.h
DesignPatterns/Creational/AbstractFactory/: AbstractFactoryPattern.h
DesignPatterns/Creational/Builder/: BuilderPattern.h
DesignPatterns/Creational/Factory/: FactoryPattern.h
DesignPatterns/Creational/Prototype/: PrototypePattern.h
DesignPatterns/Creational/Singleton/: Singleton.h
DesignPatterns/Structural/Adapter/: AdapterPattern.h
DesignPatterns/Structural/Bridge/: BridgePattern.h
DesignPatterns/Structural/Composite/: CompositePattern.h
DesignPatterns/Structural/Decorator/: DecoratorPattern.h
DesignPatterns/Structural/Facade/: facadePattern.h
DesignPatterns/Structural/FlyWeight/: flyWeightPattern.cc  flyWeightPattern.h
DesignPatterns/Structural/Proxy/: ProxyPattern.h
DesignPatterns/Tests/: CMakeLists.txt
DesignPatterns/Tests/Basics/: basicPatternsTests.cc  openClosePrincipleTests.cc
DesignPatterns/Tests/Behavioral/: ChainOfResponsibilityPatternTests.cc  CommandPatternTests.cc  IteratorPatternTests.cc  ObserverPatternTests.cc  StatePatternTests.cc  StrategyPatternTests.cc  visitorPatternTests.cc
DesignPatterns/Tests/Creational/: AbstractFactoryTest.cc  BuilderTests.cc  FactoryTest.cc  PrototypeTests.cc  SingletonTest.cc
DesignPatterns/Tests/Structural/: AdapterPatternTests.cc  BridgePatternTests.cc  CompositePatternTests.cc  DecoratorPatternTests.cc  flyWeightPatternTests.cc
OopsDesign/: CMakeLists.txt
OopsDesign/Chess/: ChessBoard.h  ChessCommon.h  ChessPieces.h  testBoard.cc
OopsDesign/Common/: CMakeLists.txt  User.h
OopsDesign/Common/inc/: board.h  dbInterface.h  game.h  position.h  square.h  user.h
OopsDesign/Common/src/: board.cc  game.cc
OopsDesign/LibraryManagementSystem/: CMakeLists.txt
OopsDesign/LibraryManagementSystem/Tests/: CMakeLists.txt  bookLocalDatabaseTests.cc  libraryTest.cc
OopsDesign/LibraryManagementSystem/inc/: bookDatabaseInterface.h  bookLocalDatabase.h  library.h  libraryUser.h  systemNotifier.h
OopsDesign/LibraryManagementSystem/src/: bookLocalDatabase.cc  library.cc
OopsDesign/TicTacToe/: Board.h  CMakeLists.txt  Location.h  Square.h  main.cc  test.cc
OopsDesign/TicTacToe/inc/: player.h  (+2 more)
Python/MachineLearning/: .gitignore  LICENSE  README.md  pyproject.toml
(+73 files in other folders)
