[project]
name = "ml"
version = "0.0.1"
authors = [
  { name="gobdevel", email="gobdeveloper@gmail.com" },
]
description = "Machine Learning tutorials"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = []

[project.optional-dependencies]
dev = []
